fixed mobile styling for cta buttons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main>
     <section class="container">
       <div class="logo-cta">
-        <img src="images/logo.svg" alt="logo">
+        <img src="images/logo.svg" class="huddle-logo" alt="logo">
         <span class="cta cta-try">Try it free</span>
       </div>
     </section>
